# lingmo-control-center

./: CMakeLists.txt
.github/workflows/: upload.yml
debian/: changelog  control
misc/: developdocument.html
rpm/: _service  velora-control-center.spec
src/dde-control-center/: CMakeLists.txt
src/dde-control-center/plugin/: DccWindow.qml
src/plugin-commoninfo/operation/: commoninfomodel.cpp  commoninfomodel.h  commoninfowork.cpp  commoninfowork.h
src/plugin-commoninfo/qml/: BootPage.qml  DevelopModePage.qml
src/plugin-dock/operation/: dccdockexport.cpp  dccdockexport.h
src/plugin-dock/qml/: DockMain.qml
src/plugin-panel/: CMakeLists.txt
src/plugin-panel/operation/: dccPanelexport.cpp  dccPanelexport.h  paneldbusproxy.cpp  paneldbusproxy.h  panelpluginmodel.cpp  panelpluginmodel.h  panelpluginsortproxymodel.cpp  panelpluginsortproxymodel.h
src/plugin-panel/qml/: Panel.qml  PanelMain.qml  PanelPluginArea.qml
src/plugin-personalization/operation/: personalizationworker.cpp  treelandworker.cpp  wallpaperprovider.cpp
src/plugin-systeminfo/operation/: systeminfomodel.cpp  systeminfomodel.h  systeminfowork.cpp
src/plugin-systeminfo/operation/qrc/license/: deepin-end-user-license-agreement_community_en_US.txt  deepin-end-user-license-agreement_community_zh_CN.txt  deepin-end-user-license-agreement_en_US.txt  deepin-end-user-license-agreement_zh_CN.txt
src/plugin-systeminfo/qml/: NativeInfoPage.qml  SystemInfoMain.qml
src/shared-utils/: CMakeLists.txt
